--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,11 @@
-name: My first GitHub Action
+viname: My first GitHub Action
 on: [push]
 jobs:
     build-app:
         runs-on: ubuntu-latest
         steps:
-<<<<<<< HEAD
             - uses: actions/checkout@v2
-            - run: tree
-=======
-            - run: echo "Hello World!!!"
-            - run: echo "this is step number 2"
-    print-hello-world2:
-        runs-on: ubuntu-latest
-        steps:
-            - run: echo "Hello World!!!"
-            - run: echo "this is step number 2"
->>>>>>> 5fe77cdfc4ea3abc03f496307b9b569847869c81
+            - uses: actions/setup-node@v2
+                with:
+                    node-version: 14
+            - run: node -v
