--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,14 @@
-viname: My first GitHub Action
+name: My first GitHub Action
 on: [push]
 jobs:
     build-app:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-<<<<<<< HEAD
             - uses: actions/setup-node@v2
-                with:
-                    node-version: 14
-            - run: node -v
-=======
-            - run: tree
->>>>>>> 4d3a686e781ad8f2ff258c9fd12a1a083e10686f
+              with:
+                node-version: 14
+            - name: Build the Project
+              run: yarn build
+            - name: Setup Finish
+              run: echo "Hurray!!!!"
