Deploy via workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
               run: yarn
             - name: Build the Project
               run: yarn build
-            - Deploying the project
+            - name: Deploying the project
               env:
                 VERCEL_ORG_ID: D2jlKAj7uzrYl4oLLkpbttSt
                 VERCEL_PROJECT_D: prj_RYd0ASkxiMwNgVsYOuivGe84c2Yn
