--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,23 +12,14 @@ jobs:
               run: yarn
             - name: Build the Project
               run: yarn build
-<<<<<<< HEAD
             - name: Sets the vercel env
               run: |
                 cd build
                 mkdir .vercel
+                cd .vercel
                 touch project.json
                 echo '{"projectId":"prj_RYd0ASkxiMwNgVsYOuivGe84c2Yn","orgId":"D2jlKAj7uzrYl4oLLkpbttSt"}' > project.json
             - name: Deploying the project
               run: yarn deploy
             - name: Setup Finish
               run: echo "Hurray!!!!"
-=======
-            - name: Deploying the project
-              env:
-                VERCEL_ORG_ID: D2jlKAj7uzrYl4oLLkpbttSt
-                VERCEL_PROJECT_D: prj_RYd0ASkxiMwNgVsYOuivGe84c2Yn
-              run: yarn deploy
-            - name: Setup Finish
-              run: echo "Hurray!!!!"
->>>>>>> c0814392a819364f39e5b1004b5f7e54441d8a57
