--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
         "scripts": {
                 "start": "snowpack dev",
                 "build": "snowpack build",
-                "deploy": "cd build && vc --production --token=mft04JObH3arevazQULYmjFF "
+                "deploy": "vc build --prod --confirm --token=6Wy8zNFJ3svvZQmA9tM9BD6i "
         },
         "dependencies": {
                 "react": "^18.0.0-alpha-64931821a-20210808",
