--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,8 @@ jobs:
               run: yarn deploy
             - name: Setup Finish
               run: echo "Hurray!!!!"
+    test-app:
+        needs: build-app
+        runs-on: ubuntu-latest
+        steps:
+            - run: echo "YOLO"
