--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,10 @@
 name: My first GitHub Action
 on: [push]
 jobs:
-    build-app:
+    buildApp:
         runs-on: ubuntu-latest
+        output:
+            text: ${{ steps.finished.outputs.text }}
         env:
             VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
             VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -26,9 +28,12 @@ jobs:
             - name: Deploying the project
               run: yarn deploy
             - name: Setup Finish
-              run: echo "Hurray!!!!"
+              id: finsihed
+              run: echo "::set-output name=text::hello-world-frombuild-job"
     test-app:
-        needs: build-app
+        needs: buildApp
         runs-on: ubuntu-latest
+        env:
+            MY_JOB_OUTPUT: ${{ needs.buildApp.outputs.text }}
         steps:
-            - run: echo "YOLO"
+            - run: echo $MY_JOB_OUTPUT
