Data Sharing among Dependent Jobs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
     buildApp:
         runs-on: ubuntu-latest
-        output:
+        outputs:
             text: ${{ steps.finished.outputs.text }}
         env:
             VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
